<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.group_thirty_one.ucf.breathalock_ss.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/sensor_display_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/output_bac_display"
            android:textSize="@dimen/bac_display_units"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/output_bac_units"
            android:textSize="@dimen/bac_display_value"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:padding="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/settings_door_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_door_title"
                android:textSize="@dimen/settings_header_name"/>
            <TextView
                android:id="@+id/settings_door_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_door_status_disabled"
                android:textSize="@dimen/settings_subheader_name"
                android:layout_below="@id/settings_door_title"/>
            <ImageView
                android:id="@+id/settings_door_status_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_status_locked"
                android:layout_alignRight="@id/settings_door_title"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/uber_selection_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:onClick="uberSelection"
            android:padding="@dimen/activity_vertical_margin"
            android:background="@drawable/background">

            <TextView
                android:id="@+id/settings_uber_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_call_uber_title"
                android:textSize="@dimen/settings_header_name"/>
            <TextView
                android:id="@+id/settings_uber_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_call_uber_summary"
                android:textSize="@dimen/settings_subheader_name"
                android:layout_below="@id/settings_uber_title"/>
            <ImageView
                android:id="@+id/settings_uber_img"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_call_uber"
                android:layout_alignRight="@id/settings_uber_title"
                android:clickable="false"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ble_selection_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="bleSelection"
            android:clickable="true"
            android:padding="@dimen/activity_vertical_margin"
            android:background="@drawable/background">

            <TextView
                android:id="@+id/settings_ble_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_ble_connection_title"
                android:textSize="@dimen/settings_header_name"/>
            <TextView
                android:id="@+id/settings_ble_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_ble_connection_status_disconnected"
                android:textSize="@dimen/settings_subheader_name"
                android:layout_below="@id/settings_ble_title"/>
            <ImageView
                android:id="@+id/settings_ble_img"
                android:clickable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_status_ble_disconnected"
                android:layout_alignRight="@id/settings_ble_title"/>
        </RelativeLayout>
    </LinearLayout>


</RelativeLayout>



